force-app/main/default/objects/Field_Mapping__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>120</length>
    <type>Text</type>
</CustomField>