force-app/main/default/objects/Field_Mapping__mdt/fields/External_Field__c.field-meta.xml
<CustomField>
    <fullName>External_Field__c</fullName>
    <label>External Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>