force-app/main/default/objects/Field_Mapping__mdt/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>