force-app/main/default/objects/Field_Mapping__mdt/fields/Mapping_Context__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Context__c</fullName>
    <label>Mapping Context</label>
    <length>120</length>
    <type>Text</type>
</CustomField>