force-app/main/default/objects/Field_Mapping__mdt/fields/Mapping_Step__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Step__c</fullName>
    <label>Mapping Step</label>
    <length>120</length>
    <type>Text</type>
</CustomField>