force-app/main/default/objects/Field_Mapping__mdt/fields/Source_Customer_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Customer_Lookup_Field__c</fullName>
    <label>Source Customer Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>