force-app/main/default/objects/Field_Mapping__mdt/fields/Source_Customer_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Customer_Target_Object__c</fullName>
    <label>Source Customer Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>