force-app/main/default/objects/Field_Mapping__mdt/fields/Source_Email_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Email_Field_API_Name__c</fullName>
    <label>Source Email Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>