force-app/main/default/objects/Field_Mapping__mdt/fields/Source_Lookup_On_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Lookup_On_Target_Field__c</fullName>
    <label>Source Lookup on Target Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>