force-app/main/default/objects/Field_Mapping__mdt/fields/Sync_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sync_Direction__c</fullName>
    <label>Sync Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Two-Way</fullName>
                <default>true</default>
                <label>Two-Way</label>
            </value>
            <value>
                <fullName>SF to QBO</fullName>
            </value>
            <value>
                <fullName>QBO to SF</fullName>
            </value>
            <value>
                <fullName>SF to Shopify</fullName>
            </value>
            <value>
                <fullName>Shopify to SF</fullName>
            </value>
            <value>
                <fullName>SF to FedEx</fullName>
            </value>
            <value>
                <fullName>FedEx to SF</fullName>
            </value>
            <value>
                <fullName>SF to UPS</fullName>
            </value>
            <value>
                <fullName>UPS to SF</fullName>
            </value>
            <value>
                <fullName>SF to Carrier</fullName>
            </value>
            <value>
                <fullName>Carrier to SF</fullName>
            </value>
            <value>
                <fullName>SF to DHL</fullName>
            </value>
            <value>
                <fullName>DHL to SF</fullName>
            </value>
            <value>
                <fullName>SF to NetSuite</fullName>
            </value>
            <value>
                <fullName>NetSuite to SF</fullName>
            </value>
            <value>
                <fullName>SF to Meta</fullName>
            </value>
            <value>
                <fullName>Meta to SF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>