force-app/main/default/objects/Field_Mapping__mdt/fields/Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API_Name__c</fullName>
    <label>Target Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>